# generatedAPI/src/main/kotlin/gp/backend/model/BookTurn.kt
@@ -1,0 +1,42 @@
+/**
+ * Smartphone Backend
+ *
+ * Smartphone Customer backend specification
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: alsabateen.alaa@gmail.com
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package gp.backend.model
+
+
+import com.squareup.moshi.Json
+
+/**
+ * 
+ *
+ * @param uuid 
+ * @param category 
+ */
+
+data class BookTurn (
+
+    @Json(name = "uuid")
+    val uuid: kotlin.String,
+
+    @Json(name = "category")
+    val category: kotlin.String
+
+)
+
